--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Holidays from theCoderSchool!</title>
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Happy Holidays from theCoderSchool!</title>
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
+
 <body>
-    <div class="container">
-      <div class="d-flex justify-content-center row mt-5">
+	<img src="assets/img/stamp.png" alt="Postage Stamp" class="stamp" width="80">
+    <div class="container-fluid full-screen snow-bg">
+      <div class="d-flex justify-content-center row pt-5 text-center">
         <h1 class="display-1"><span class="red">HAPPY</span> <span class="green">HOLIDAYS!</span></h1>
         <p class="lead handwriting">yours truly,</p>
         <p class="lead handwriting">theCoderSchool Centennial.</p>
+        <p class="lead handwriting flexible-spacing">P.S. Want to give your kids an awesome start to the new year? </p>
+      </div>
+      <div class="d-flex justify-content-center">      <button class="btn btn-primary d-xl-flex flexible-spacing" onclick="document.getElementById('learn-more-target').scrollIntoView()">Learn More</button>
+      </div>
+    </div>
+    <div class="container text-center">
+      <h1 class="display-5 mt-5" id="learn-more-target">What is theCoderSchool?</h1>
+      <p class="lead mt-3">theCoderSchool is a programming school where students can learn to code in many different languages like Python, Java, JavaScript, and HTML. Kids have fun learning to code the things they're actually interseted in.</p>
+    </div>
+    <div class="container">
+      <p class="handwriting mt-5">More Info:</h3>
+      <ul>
+        <li><strong>Website:</strong> <a href="https://centennial.thecoderschool.com/">https://centennial.thecoderschool.com</a></li>
+        <li><strong>Address:</strong> 20269 E Smoky Hill Rd, Centennial, CO 80015 (<a href="https://g.page/thecoderschool-centennial?share">Maps Link</a>)</li>
+      </ul>
+
+      <p class="handwriting mt-2">Or, if you're already convinced, get in touch:</p>
+      <div class="buttons text-center p-5 mb-5">
+        <div class="p-3 mb-2 bg-info text-white"><i class="bi bi-envelope"></i> centennial@thecoderschool.com</div>
+        <div class="p-3 mb-2 bg-info text-white"><i class="bi bi-telephone"></i> (720) 899-5667</div>
+
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
