Fix text size on smaller displays

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
 
       <p class="handwriting mt-2">Or, if you're already convinced, get in touch:</p>
-      <div class="buttons text-center p-5 mb-5">
+      <div class="text-center p-5 mb-5">
         <div class="p-3 mb-2 bg-info text-white"><i class="bi bi-envelope"></i> centennial@thecoderschool.com</div>
         <div class="p-3 mb-2 bg-info text-white"><i class="bi bi-telephone"></i> (720) 899-5667</div>
 
