--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Happy Holidays from theCoderSchool!</title>
+	<!-- Primary Meta Tags -->
+	<meta name="title" content="theCoderSchool Centennial">
+	<meta name="description" content="Happy New Year's from theCoderSchool!">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://ryattack.github.io/thecoderschool-holidays">
+	<meta property="og:title" content="theCoderSchool Centennial">
+	<meta property="og:description" content="Happy New Year's from theCoderSchool!">
+	<meta property="og:image" content="assets/img/thumbnail.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://ryattack.github.io/thecoderschool-holidays">
+	<meta property="twitter:title" content="theCoderSchool Centennial">
+	<meta property="twitter:description" content="Happy New Year's from theCoderSchool!">
+	<meta property="twitter:image" content="assets/img/thumbnail.png">
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 
