Change to absolute path for meta image

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	<meta property="og:url" content="https://ryattack.github.io/thecoderschool-holidays">
 	<meta property="og:title" content="theCoderSchool Centennial">
 	<meta property="og:description" content="Happy New Year's from theCoderSchool!">
-	<meta property="og:image" content="assets/img/thumbnail.png">
+	<meta property="og:image" content="https://ryattack.github.io/thecoderschool-holidays/assets/img/thumbnail.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://ryattack.github.io/thecoderschool-holidays">
 	<meta property="twitter:title" content="theCoderSchool Centennial">
 	<meta property="twitter:description" content="Happy New Year's from theCoderSchool!">
-	<meta property="twitter:image" content="assets/img/thumbnail.png">
+	<meta property="twitter:image" content="https://ryattack.github.io/thecoderschool-holidays/assets/img/thumbnail.png">
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/main.css">
